After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702597 - shmsink: events not propagated to basesink
shmsink: events not propagated to basesink
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.1.1
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-18 19:28 UTC by Aleix Conchillo Flaqué
Modified: 2013-07-06 00:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
propagate event to base sink (700 bytes, patch)
2013-06-18 19:33 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2013-06-18 19:28:59 UTC
Events are not propagated to the basesink class.

------

Setting pipeline to PAUSED ...
Pipeline is live and does not need PREROLL ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
WARNING: from element /GstPipeline:pipeline0/GstShmSink:shmsink0: Internal data flow problem.
Additional debug info:
gstbasesink.c(3234): gst_base_sink_chain_unlocked (): /GstPipeline:pipeline0/GstShmSink:shmsink0:
Received buffer without a new-segment. Assuming timestamps start from 0.
^Chandling interrupt.
Interrupt: Stopping pipeline ...
Execution ended after 0:00:01.259136055
Setting pipeline to PAUSED ...
Setting pipeline to READY ...
Setting pipeline to NULL ...
Freeing pipeline ...
Comment 1 Aleix Conchillo Flaqué 2013-06-18 19:33:52 UTC
Created attachment 247206 [details] [review]
propagate event to base sink
Comment 2 Olivier Crête 2013-06-19 00:34:41 UTC
Comitted

commit 8b00e02f1631acc4ca9108159a50e91787bfc8de
Author: Aleix Conchillo Flaque <aleix@oblong.com>
Date:   Tue Jun 18 12:29:41 2013 -0700

    shmsink: propagate events to basesink class
    
    https://bugzilla.gnome.org/show_bug.cgi?id=702597
Comment 3 Tim-Philipp Müller 2013-07-06 00:03:56 UTC
cherry-picked into 1.0 as well.