shmsink: propagate events to basesink class

https://bugzilla.gnome.org/show_bug.cgi?id=702597